force-app/main/default/objects/LabOrderStatusConfig__mdt/LabOrderStatusConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configurable lab order status groupings used by Partner Dashboard logic. Add or deactivate rows here instead of changing Apex code.</description>
    <label>Lab Order Status Config</label>
    <pluralLabel>Lab Order Status Configs</pluralLabel>
</CustomObject>