force-app/main/default/objects/LabOrderStatusConfig__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Deactivate a row to remove a status from its category without deleting the record.</description>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>