force-app/main/default/objects/LabOrderStatusConfig__mdt/fields/Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Category__c</fullName>
    <description>Logical grouping key used in Apex. Allowed values: COMPLETED, REVENUE, LOST, PRE_SAMPLE_COLLECTION, POST_SAMPLE_COLLECTION.</description>
    <label>Status Category</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>