force-app/main/default/objects/LabOrderStatusConfig__mdt/fields/Status_Values__c.field-meta.xml
<CustomField>
    <fullName>Status_Values__c</fullName>
    <description>Comma-separated list of Lab_Order__c Status__c values that belong to this category. Example: Results Ready,Expired</description>
    <label>Status Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>